# MentorVerse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  eslint.config.mjs  inference.py  middleware.ts  models.py  next.config.mjs  openenv.yaml  package-lock.json  package.json  pyproject.toml  server.js  tailwind.config.ts  tsconfig.json
server/: __init__.py  app.py  models.py
src/app/: globals.css  layout.tsx  page.tsx  template.tsx
src/app/api/code/execute/: route.ts
src/app/api/code/history/: route.ts
src/app/api/code/languages/: route.ts
src/app/api/code/problems/: route.ts
src/app/api/dashboard/: route.ts
src/app/api/learn/: route.ts
src/app/api/learner-profile/: route.ts
src/app/api/openenv/reset/: route.ts
src/app/dashboard/: page.tsx
src/app/learn/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: app-shell.tsx  attendance-tracker.tsx  attention-monitor.tsx  auth-panel.tsx  code-practice-workspace.tsx  learn-workspace.tsx  learner-dashboard.tsx  loading-spinner.tsx  site-footer.tsx  site-navbar.tsx  splash-screen.tsx
src/lib/: code-practice.ts  dashboard.ts  firebase-admin.ts  firebase.ts  huggingface.ts  inference.ts  supabase.ts  types.ts  voice-service.ts
src/lib/agents/: adaptive.ts  analysis.ts  attendance.ts  cognitive.ts  evaluation.ts  mentor.ts  teacher.ts
src/types/: index.d.ts
supabase/migrations/: 0001_mentorverse_sessions.sql  0002_mentorverse_learner_profiles.sql  0003_mentorverse_code_submissions.sql
(+1 files in other folders)
