[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentorverse-openenv"
version = "0.1.0"
description = "MentorVerse OpenEnv compatibility scaffold"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "requests>=2.25.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["client", "models"]
